--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "javascript"
   ],
   "author": "Trinyoung",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
